[gd_scene load_steps=4 format=3 uid="uid://4rslgnta0xfi"]

[ext_resource type="Theme" uid="uid://cgu8btr88v13k" path="res://themes/default.tres" id="1"]
[ext_resource type="Script" uid="uid://dm3dtm6nqrdsb" path="res://scripts/sexuality_picker.gd" id="2_0wfyh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.12941177, 0.14901961, 0.18039216, 0)
border_color = Color(0.08399999, 0.095999986, 0.116, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 3
anti_aliasing = false

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -432.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21176471, 0.23921569, 0.2901961, 1)

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
theme_override_font_sizes/font_size = 14
current_tab = 0
drag_to_rearrange_enabled = true

[node name="Sexuality Picker" type="Control" parent="TabContainer"]
layout_mode = 2
script = ExtResource("2_0wfyh")
metadata/_tab_index = 0

[node name="Content" type="PanelContainer" parent="TabContainer/Sexuality Picker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="TabContainer/Sexuality Picker/Content"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sexuality Picker/Content/VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.22352941)
theme_override_constants/shadow_offset_x = -1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 32
text = "Sexuality Picker"
horizontal_alignment = 1

[node name="HeaderSeparator" type="HSeparator" parent="TabContainer/Sexuality Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Name" type="LineEdit" parent="TabContainer/Sexuality Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter character name"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Sexuality Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RandomizeButton" type="Button" parent="TabContainer/Sexuality Picker/Content/VBox/HBoxContainer"]
layout_mode = 2
text = "Randomize"

[node name="ClearButton" type="Button" parent="TabContainer/Sexuality Picker/Content/VBox/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="CopyButton" type="Button" parent="TabContainer/Sexuality Picker/Content/VBox/HBoxContainer"]
layout_mode = 2
text = "Copy"

[node name="CopyNotifier" type="Label" parent="TabContainer/Sexuality Picker/Content/VBox/HBoxContainer"]
visible = false
layout_mode = 2
text = "Text copied to clipboard."

[node name="Output" type="RichTextLabel" parent="TabContainer/Sexuality Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 2
theme_override_colors/default_color = Color(0.5686275, 0.5803922, 0.59607846, 1)
text = "Press randomize to generate."
selection_enabled = true

[node name="Weights" type="FoldableContainer" parent="TabContainer/Sexuality Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
folded = true
title = "Choices"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Sexuality Picker/Content/VBox/Weights"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Prefer matching sexuality and romantic orientation:"

[node name="HSeparator" type="HSeparator" parent="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MatchBiasContainer" type="HBoxContainer" parent="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BiasSlider" type="HSlider" parent="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer/MatchBiasContainer"]
custom_minimum_size = Vector2(800, 30)
layout_mode = 2
step = 5.0
value = 50.0
scrollable = false

[node name="BiasLabel" type="Label" parent="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer/MatchBiasContainer"]
layout_mode = 2
text = "Bias: 50%"

[node name="Label2" type="Label" parent="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Probabilities:"

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HistoryClearButton" type="Button" parent="TabContainer/Sexuality Picker/Content/VBox"]
layout_mode = 2
text = "Clear History"

[node name="FoldableContainer" type="FoldableContainer" parent="TabContainer/Sexuality Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
title = "History"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Sexuality Picker/Content/VBox/FoldableContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sexuality Picker/Content/VBox/FoldableContainer/ScrollContainer"]
layout_mode = 2

[node name="No History text" type="RichTextLabel" parent="TabContainer/Sexuality Picker/Content/VBox/FoldableContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
focus_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0wfyh")
text = "No history yet."
selection_enabled = true

[node name="VersionText" type="Label" parent="TabContainer/Sexuality Picker/Content/VBox"]
layout_mode = 2
text = "Character Creation Toolkit v1.0 - Created by Kris Velivia"

[node name="Gender Picker" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Content" type="PanelContainer" parent="TabContainer/Gender Picker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 5.0
offset_right = -16.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="TabContainer/Gender Picker/Content"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Gender Picker/Content/VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.22352941)
theme_override_constants/shadow_offset_x = -1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 32
text = "Gender Picker"
horizontal_alignment = 1

[node name="HeaderSeparator" type="HSeparator" parent="TabContainer/Gender Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Name" type="LineEdit" parent="TabContainer/Gender Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter character name"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Gender Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RandomizeButton" type="Button" parent="TabContainer/Gender Picker/Content/VBox/HBoxContainer"]
layout_mode = 2
text = "Randomize"

[node name="ClearButton" type="Button" parent="TabContainer/Gender Picker/Content/VBox/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="CopyButton" type="Button" parent="TabContainer/Gender Picker/Content/VBox/HBoxContainer"]
layout_mode = 2
text = "Copy"

[node name="CopyNotifier" type="Label" parent="TabContainer/Gender Picker/Content/VBox/HBoxContainer"]
visible = false
layout_mode = 2
text = "Text copied to clipboard."

[node name="Output" type="RichTextLabel" parent="TabContainer/Gender Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 2
theme_override_colors/default_color = Color(0.5686275, 0.5803922, 0.59607846, 1)
text = "Press randomize to generate."
selection_enabled = true

[node name="Weights" type="FoldableContainer" parent="TabContainer/Gender Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Gender Picker/Content/VBox/Weights"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Gender Picker/Content/VBox/Weights/ScrollContainer"]
layout_mode = 2

[node name="Heterosexual Container" type="HBoxContainer" parent="TabContainer/Gender Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HetSlider" type="HSlider" parent="TabContainer/Gender Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer/Heterosexual Container"]
custom_minimum_size = Vector2(600, 30)
layout_mode = 2
step = 5.0
value = 100.0
scrollable = false

[node name="HetLabel" type="Label" parent="TabContainer/Gender Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer/Heterosexual Container"]
layout_mode = 2
text = "Heterosexual: 100.0%"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Gender Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer/Heterosexual Container"]
layout_mode = 2

[node name="HistoryClearButton" type="Button" parent="TabContainer/Gender Picker/Content/VBox"]
layout_mode = 2
text = "Clear History"

[node name="FoldableContainer" type="FoldableContainer" parent="TabContainer/Gender Picker/Content/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
title = "History"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Gender Picker/Content/VBox/FoldableContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Gender Picker/Content/VBox/FoldableContainer/ScrollContainer"]
layout_mode = 2

[node name="No History text" type="RichTextLabel" parent="TabContainer/Gender Picker/Content/VBox/FoldableContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
focus_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0wfyh")
text = "No history yet."
selection_enabled = true

[node name="VersionText" type="Label" parent="TabContainer/Gender Picker/Content/VBox"]
layout_mode = 2
text = "Character Details Toolkit beta v0.1.0 - Created by Kris Velivia"

[node name="Ethnicity Picker" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label2" type="Label" parent="TabContainer/Ethnicity Picker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -300.0
offset_right = 576.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "TODO."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Species Picker" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Label3" type="Label" parent="TabContainer/Species Picker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -300.0
offset_right = 576.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "TODO."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mental Profile Generator" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="Label4" type="Label" parent="TabContainer/Mental Profile Generator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -300.0
offset_right = 576.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "TODO."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Physical Traits & Disabillites Picker" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="Label5" type="Label" parent="TabContainer/Physical Traits & Disabillites Picker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -300.0
offset_right = 576.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "TODO."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="TabContainer/Sexuality Picker/Content/VBox/Name" to="TabContainer/Sexuality Picker" method="_on_name_text_changed"]
[connection signal="pressed" from="TabContainer/Sexuality Picker/Content/VBox/HBoxContainer/RandomizeButton" to="TabContainer/Sexuality Picker" method="_on_randomize_button_pressed"]
[connection signal="pressed" from="TabContainer/Sexuality Picker/Content/VBox/HBoxContainer/ClearButton" to="TabContainer/Sexuality Picker" method="_on_clear_button_pressed"]
[connection signal="pressed" from="TabContainer/Sexuality Picker/Content/VBox/HBoxContainer/CopyButton" to="TabContainer/Sexuality Picker" method="_on_copy_button_pressed"]
[connection signal="value_changed" from="TabContainer/Sexuality Picker/Content/VBox/Weights/ScrollContainer/VBoxContainer/MatchBiasContainer/BiasSlider" to="TabContainer/Sexuality Picker" method="_on_bias_slider_value_changed"]
[connection signal="pressed" from="TabContainer/Sexuality Picker/Content/VBox/HistoryClearButton" to="TabContainer/Sexuality Picker" method="_on_history_clear_button_pressed"]
[connection signal="pressed" from="TabContainer/Gender Picker/Content/VBox/HBoxContainer/ClearButton" to="TabContainer/Sexuality Picker" method="_on_clear_button_pressed"]
[connection signal="pressed" from="TabContainer/Gender Picker/Content/VBox/HBoxContainer/CopyButton" to="TabContainer/Sexuality Picker" method="_on_copy_button_pressed"]
